fix store-error class spacing

--- a/scss/components/_store-error.scss
+++ b/scss/components/_store-error.scss
@@ -1,8 +1,7 @@
 .store-error {
-  margin-left: 2rem;
+  margin-left: 0 2rem 2rem;
   padding: 1rem;
   border: 1px solid $red;
-  border-radius: 12px;
   background: rgba(255,127,127,.15);
   color: $red-darkened;
   line-height: 45px;
